# PublicKeyCollector

./: .gitignore  CMakeLists.txt  DiscoverHost.sh  Makefile  README.md
include/: SSHCollector.h  SSHsCollector.h
src/: AbstractCollector.cpp  AbstractCollector.h  MessageConst.h  PathConst.h  SSHCollector.cpp  SSHsCollector.cpp
test/: SSHCollectorTestCases.cpp
